--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "exit": "^0.1.2",
     "figlet": "^1.2.0",
     "fs-extra": "^4.0.1",
+    "gulp-shell": "^0.6.3",
     "inquirer": "^3.2.1",
     "js-yaml": "3.9.1",
     "jsondiffpatch": "0.2.4",
@@ -33,6 +34,7 @@
     "@types/typescript": "2.0.0",
     "@types/underscore": "^1.8.1",
     "del": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-ejs": "^3.0.1",
     "gulp-livereload": "^3.8.1",
@@ -44,10 +46,15 @@
     "nodemon": "^1.11.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.1.0",
-    "tslint": "^5.6.0"
+    "tslint": "^5.6.0",
+    "ts-loader": "^2.0.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-fail-plugin": "^1.0.6",
+    "webpack-node-externals": "^1.5.4"
   },
   "scripts": {
-    "start": "node bin/coveo-client.js",
+    "start": "cd bin && node coveo-client.js",
     "test": ""
   },
   "author": "Jean-Francois Cloutier & Yassine Lakhdar",
