Added env variables and config file

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "commander": "^2.11.0",
     "ejs": "^2.5.7",
     "exit": "^0.1.2",
+    "express": "^4.15.4",
     "figlet": "^1.2.0",
     "fs-extra": "^4.0.1",
     "gulp-shell": "^0.6.3",
     "inquirer": "^3.2.1",
     "js-yaml": "3.9.1",
+    "json-loader": "^0.5.7",
     "jsondiffpatch": "0.2.4",
     "opn": "5.1.0",
     "request": "^2.81.0",
