--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "opn": "5.1.0",
     "request": "^2.81.0",
     "typescript": "^2.4.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "url-search-params": "^0.10.0"
   },
   "devDependencies": {
     "@types/chalk": "0.4.31",
@@ -56,7 +57,7 @@
     "webpack-node-externals": "^1.5.4"
   },
   "scripts": {
-    "start": "cd bin && node coveo-client.js",
+    "start": "node bin/coveo-client.js",
     "test": ""
   },
   "author": "Jean-Francois Cloutier & Yassine Lakhdar",
