Casing of the files and organization of the interfaces and model classes
- Changed the casing of some files for consistency
- Added interfaces for coveo objects
- Added model classes for coveo objects

--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "coveo-client.ts",
   "dependencies": {
-    "chalk": "^2.1.0",
+    "@types/chalk": "0.4.31",
+    "@types/ejs": "2.3.33",
+    "@types/fs-extra": "4.0.0",
+    "@types/inquirer": "0.0.35",
+    "@types/js-yaml": "3.9.0",
+    "@types/request": "2.0.1",
+    "@types/underscore": "1.8.1",
+    "chalk": "2.1.0",
     "clear": "0.0.1",
     "clui": "^0.3.6",
     "commander": "^2.11.0",
-    "ejs": "^2.5.7",
+    "ejs": "2.5.7",
     "exit": "^0.1.2",
     "express": "^4.15.4",
     "figlet": "^1.2.0",
-    "fs-extra": "^4.0.1",
+    "fs": "0.0.1-security",
+    "fs-extra": "4.0.1",
+    "gulp-sass": "3.1.0",
     "gulp-shell": "^0.6.3",
-    "inquirer": "^3.2.1",
+    "inquirer": "3.2.1",
     "js-yaml": "3.9.1",
     "json-loader": "^0.5.7",
     "jsondiffpatch": "0.2.4",
     "opn": "5.1.0",
-    "request": "^2.81.0",
+    "request": "2.81.0",
     "typescript": "^2.4.2",
-    "underscore": "^1.8.3",
+    "underscore": "1.8.3",
     "url-search-params": "^0.10.0"
   },
   "devDependencies": {
