--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+      "strict": true,
+      "alwaysStrict": true,
       "module": "commonjs",
       "target": "es5",
       "declaration": false,
