--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "request": "2.81.0",
     "typescript": "^2.4.2",
     "underscore": "1.8.3",
-    "url-search-params": "^0.10.0"
+    "url-search-params": "^0.10.0",
+    "webpack": "1.15.0"
   },
   "devDependencies": {
     "@types/chalk": "0.4.31",
