--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/chalk": "0.4.31",
     "@types/ejs": "2.3.33",
+    "@types/flat": "0.0.28",
     "@types/fs-extra": "4.0.0",
     "@types/inquirer": "0.0.35",
     "@types/js-yaml": "3.9.0",
@@ -19,6 +20,7 @@
     "exit": "^0.1.2",
     "express": "^4.15.4",
     "figlet": "^1.2.0",
+    "flat": "4.0.0",
     "fs": "0.0.1-security",
     "fs-extra": "4.0.1",
     "gulp-sass": "3.1.0",
