--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/fs-extra": "4.0.0",
     "@types/inquirer": "0.0.35",
     "@types/js-yaml": "3.9.0",
+    "@types/opn": "3.0.28",
     "@types/request": "2.0.1",
     "@types/underscore": "1.8.1",
     "chalk": "2.1.0",
