--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/fs-extra": "4.0.0",
     "@types/inquirer": "0.0.35",
     "@types/js-yaml": "3.9.0",
+    "@types/node-persist": "0.0.32",
     "@types/opn": "3.0.28",
     "@types/request": "2.0.1",
     "@types/underscore": "1.8.1",
@@ -31,7 +32,13 @@
     "js-yaml": "3.9.1",
     "json-loader": "^0.5.7",
     "jsondiffpatch": "0.2.4",
+    "keypress": "0.2.1",
+    "node-persist": "2.1.0",
     "opn": "5.1.0",
+    "read": "1.0.7",
+    "readline": "1.3.0",
+    "readline-sync": "1.4.7",
+    "readline-ui": "2.2.3",
     "request": "2.81.0",
     "sync-request": "4.1.0",
     "synchronize": "2.0.0",
