--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "json-loader": "^0.5.7",
     "jsondiffpatch": "0.2.4",
     "keypress": "0.2.1",
+    "node-json2html": "1.1.1",
     "node-persist": "2.1.0",
     "opn": "5.1.0",
+    "random-id": "0.0.2",
     "read": "1.0.7",
     "readline": "1.3.0",
     "readline-sync": "1.4.7",
