--- a/test/settings.yml
+++ b/test/settings.yml
@@ -1,3 +1,11 @@
+Command
+  MandatoryParameters
+    - origin: myuatorg
+    - destination: myprodorg
+  OptionalParameters
+    - originapikey: xxf5fc1b9b-ca41-47a0-9ce9-e6a586926ce6
+    - destinationapikey: xx60f1aead-d498-4747-b799-401914fe5e09
+
 Organization
   name: myuatorg
   Sources
