--- a/package.json
+++ b/package.json
@@ -4,65 +4,43 @@
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "coveo-client.ts",
   "dependencies": {
-    "@types/chalk": "0.4.31",
-    "@types/ejs": "2.3.33",
-    "@types/flat": "0.0.28",
-    "@types/fs-extra": "4.0.0",
-    "@types/inquirer": "0.0.35",
-    "@types/js-yaml": "3.9.0",
-    "@types/node-persist": "0.0.32",
-    "@types/opn": "3.0.28",
-    "@types/request": "2.0.1",
-    "@types/underscore": "1.8.1",
     "chalk": "2.1.0",
     "clear": "0.0.1",
     "clui": "^0.3.6",
     "commander": "^2.11.0",
     "ejs": "2.5.7",
-    "exit": "^0.1.2",
-    "express": "^4.15.4",
+    "express": "^4.16.1",
     "figlet": "^1.2.0",
     "flat": "4.0.0",
     "fs": "0.0.1-security",
-    "fs-extra": "4.0.1",
     "gulp-sass": "3.1.0",
     "gulp-shell": "^0.6.3",
     "gulp-util": "^3.0.8",
     "inquirer": "3.2.1",
-    "js-yaml": "3.9.1",
-    "json-loader": "^0.5.7",
-    "jsondiffpatch": "0.2.4",
-    "keypress": "0.2.1",
-    "node-json2html": "1.1.1",
-    "node-persist": "2.1.0",
+    "node-persist": "^2.1.0",
     "opn": "5.1.0",
     "random-id": "0.0.2",
-    "read": "1.0.7",
-    "readline": "1.3.0",
-    "readline-sync": "1.4.7",
-    "readline-ui": "2.2.3",
     "request": "2.81.0",
     "sync-request": "4.1.0",
-    "synchronize": "2.0.0",
-    "typescript": "^2.4.2",
-    "underscore": "1.8.3",
-    "url-search-params": "^0.10.0",
-    "webpack": "1.15.0"
+    "typescript": "^2.5.3",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "@types/chalk": "0.4.31",
+    "@types/commander": "^2.11.0",
     "@types/ejs": "^2.3.33",
-    "@types/fs-extra": "^4.0.0",
+    "@types/flat": "0.0.28",
+    "@types/fs-extra": "^4.0.2",
     "@types/inquirer": "0.0.35",
-    "@types/js-yaml": "3.9.0",
     "@types/node": "8.0.20",
+    "@types/node-persist": "0.0.32",
     "@types/opn": "3.0.28",
     "@types/promise": "^7.1.30",
-    "@types/request": "^2.0.0",
+    "@types/request": "^2.0.4",
     "@types/typescript": "2.0.0",
-    "@types/underscore": "^1.8.1",
+    "@types/underscore": "^1.8.3",
     "del": "^3.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-ejs": "^3.0.1",
     "gulp-livereload": "^3.8.1",
@@ -70,13 +48,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-stream": "0.0.2",
-    "gulp-typescript": "^3.2.1",
-    "nodemon": "^1.11.0",
+    "gulp-typescript": "^3.2.2",
+    "nodemon": "^1.12.1",
     "require-dir": "^0.3.2",
-    "run-sequence": "^2.1.0",
-    "tslint": "^5.6.0",
-    "ts-loader": "^2.0.0",
-    "webpack": "^1.13.2",
+    "run-sequence": "^2.2.0",
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
+    "webpack": "1.15.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-fail-plugin": "^1.0.6",
     "webpack-node-externals": "^1.5.4"
