--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "coveo-client.ts",
   "dependencies": {
+    "@types/chai": "^4.0.4",
+    "chai": "^4.1.2",
     "chalk": "2.1.0",
     "clear": "0.0.1",
     "clui": "^0.3.6",
@@ -14,13 +16,13 @@
     "flat": "4.0.0",
     "fs": "0.0.1-security",
     "gulp-sass": "3.1.0",
-    "gulp-shell": "^0.6.3",
     "gulp-util": "^3.0.8",
     "inquirer": "3.2.1",
     "node-persist": "^2.1.0",
     "opn": "5.1.0",
     "random-id": "0.0.2",
     "request": "2.81.0",
+    "save-dev": "^2.0.0",
     "sync-request": "4.1.0",
     "typescript": "^2.5.3",
     "underscore": "1.8.3"
@@ -32,6 +34,7 @@
     "@types/flat": "0.0.28",
     "@types/fs-extra": "^4.0.2",
     "@types/inquirer": "0.0.35",
+    "@types/mocha": "^2.2.43",
     "@types/node": "8.0.20",
     "@types/node-persist": "0.0.32",
     "@types/opn": "3.0.28",
@@ -47,8 +50,10 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-shell": "^0.6.3",
     "gulp-stream": "0.0.2",
     "gulp-typescript": "^3.2.2",
+    "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
@@ -61,7 +66,7 @@
   },
   "scripts": {
     "start": "node bin/coveo-client.js",
-    "test": ""
+    "test": "./node_modules/mocha/bin/mocha bin/test/test.js"
   },
   "author": "Jean-Francois Cloutier & Yassine Lakhdar",
   "license": "GPL-3.0"
