--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "coveo-client.ts",
   "dependencies": {
-    "@types/chai": "^4.0.4",
     "chai": "^4.1.2",
     "chalk": "2.1.0",
     "clear": "0.0.1",
@@ -18,6 +17,7 @@
     "gulp-sass": "3.1.0",
     "gulp-util": "^3.0.8",
     "inquirer": "3.2.1",
+    "json-loader": "^0.5.7",
     "node-persist": "^2.1.0",
     "opn": "5.1.0",
     "random-id": "0.0.2",
@@ -28,6 +28,7 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
     "@types/chalk": "0.4.31",
     "@types/commander": "^2.11.0",
     "@types/ejs": "^2.3.33",
