--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
   "originOrganization": {
-    "id": "coveoclientdevkladnekl",
-    "apiKey": "xxad080a6e-7e44-4778-989f-9c36cd5a57cd"
+    "id": "cclidevpsivn3e8",
+    "apiKey": "xx5928a710-81cd-4cce-b16f-c8268f309ac9"
   },
   "destinationOrganization": {
-    "id": "coveoclientprod5sitrni5",
-    "apiKey": "xxa03864d1-9cf4-4770-86af-385ce80ec939"
+    "id": "cclidev2naj1yt5x",
+    "apiKey": "xx18eebe00-fbd7-49de-864e-bd72d4b23911"
   }
 }
