--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "figlet": "^1.2.0",
     "flat": "4.0.0",
     "fs": "0.0.1-security",
+    "fs-extra": "^4.0.2",
     "gulp-sass": "3.1.0",
     "gulp-util": "^3.0.8",
     "inquirer": "3.2.1",
