--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "random-id": "0.0.2",
     "request": "2.81.0",
     "save-dev": "^2.0.0",
-    "sync-request": "4.1.0",
+    "sync-request": "^4.1.0",
     "typescript": "^2.5.3",
     "underscore": "1.8.3"
   },
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "start": "node bin/coveo-client.js",
-    "test": "./node_modules/mocha/bin/mocha bin/test/test.js"
+    "test": "./node_modules/mocha/bin/mocha bin/tests/test.js"
   },
   "author": "Jean-Francois Cloutier & Yassine Lakhdar",
   "license": "GPL-3.0"
