--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "json-loader": "^0.5.7",
     "node-persist": "^2.1.0",
     "opn": "5.1.0",
+    "ora": "^1.3.0",
     "random-id": "0.0.2",
     "request": "2.81.0",
     "save-dev": "^2.0.0",
@@ -40,6 +41,7 @@
     "@types/node": "8.0.20",
     "@types/node-persist": "0.0.32",
     "@types/opn": "^3.0.28",
+    "@types/ora": "^1.3.1",
     "@types/promise": "^7.1.30",
     "@types/request": "^2.0.4",
     "@types/typescript": "2.0.0",
