--- a/package.json
+++ b/package.json
@@ -6,24 +6,17 @@
   "dependencies": {
     "chai": "^4.1.2",
     "chalk": "2.1.0",
-    "clear": "0.0.1",
-    "clui": "^0.3.6",
     "commander": "^2.11.0",
     "express": "^4.16.1",
-    "figlet": "^1.2.0",
     "flat": "4.0.0",
     "fs": "0.0.1-security",
     "fs-extra": "^4.0.2",
-    "gulp-sass": "3.1.0",
     "gulp-util": "^3.0.8",
     "inquirer": "3.2.1",
     "json-loader": "^0.5.7",
-    "node-persist": "^2.1.0",
     "opn": "5.1.0",
     "ora": "^1.3.0",
-    "random-id": "0.0.2",
     "request": "2.81.0",
-    "save-dev": "^2.0.0",
     "sync-request": "^4.1.0",
     "typescript": "^2.5.3",
     "underscore": "1.8.3"
@@ -37,7 +30,6 @@
     "@types/inquirer": "0.0.35",
     "@types/mocha": "^2.2.43",
     "@types/node": "8.0.20",
-    "@types/node-persist": "0.0.32",
     "@types/opn": "^3.0.28",
     "@types/ora": "^1.3.1",
     "@types/promise": "^7.1.30",
@@ -50,9 +42,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3",
-    "gulp-stream": "0.0.2",
     "gulp-typescript": "^3.2.2",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
@@ -64,8 +54,7 @@
     "webpack-dev-server": "^1.14.1",
     "webpack-fail-plugin": "^1.0.6",
     "webpack-node-externals": "^1.5.4",
-    "webpack-notifier": "^1.5.0",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-notifier": "^1.5.0"
   },
   "scripts": {
     "start": "node bin/coveo-client.js",
