--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "commander": "^2.11.0",
     "flat": "4.0.0",
     "fs-extra": "^4.0.2",
-    "inquirer": "3.2.1",
+    "inquirer": "^3.3.0",
     "opn": "5.1.0",
     "ora": "^1.3.0",
     "request": "2.81.0",
