--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 language: node_js
 notifications:
 node_js:
-- 8.5.0
+- 6.10.3
 cache:
   directories:
   - node_modules
 before_script:
 - npm install -g gulp
 before_install:
-- npm install -g npm@5.5.1
+- npm install -g npm@5.6.0
 script:
 - source read.version.sh
 - echo $PACKAGE_JSON_VERSION
 - npm run minimize
+- gulp buildTest
 - npm run test
 after_success:
 # - npm run doc
@@ -21,4 +22,4 @@ after_success:
 # - npm run zipForGitReleases
 branches:
   only:
-  - master
+  - light-cli
