--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "json-loader": "^0.5.7",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
+    "nyc": "^11.4.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
     "ts-loader": "^2.3.7",
+    "ts-node": "^4.1.0",
     "tslint": "^5.7.0",
     "webpack": "1.15.0",
     "webpack-dev-server": "^1.14.1",
@@ -56,7 +58,7 @@
   },
   "scripts": {
     "start": "node bin/coveo-client.js",
-    "test": "./node_modules/mocha/bin/mocha bin/tests/test.js --reporter dot",
+    "test": "gulp test",
     "build": "gulp",
     "minimize": "gulp --minimize"
   },
