--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/typescript": "2.0.0",
     "@types/underscore": "^1.8.3",
     "chai": "^4.1.2",
+    "codecov": "^3.0.0",
     "del": "^3.0.0",
     "express": "^4.16.1",
     "extract-text-webpack-plugin": "^3.0.1",
@@ -59,6 +60,7 @@
   "scripts": {
     "start": "node bin/coveo-client.js",
     "test": "gulp test",
+    "posttest": "nyc report --reporter=json && codecov -f coverage/*.json -t d6f9e7c5-6e0d-4b79-aec0-c57964f3881b",
     "build": "gulp",
     "minimize": "gulp --minimize"
   },
