--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "gulp-shell": "^0.6.3",
     "gulp-typescript": "^3.2.2",
     "gulp-util": "^3.0.8",
+    "husky": "^0.14.3",
     "json-loader": "^0.5.7",
+    "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
     "nyc": "^11.4.1",
+    "prettier": "^1.9.2",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
     "ts-loader": "^2.3.7",
@@ -58,11 +61,21 @@
     "webpack-notifier": "^1.5.0"
   },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "node bin/coveo-client.js",
     "test": "gulp test",
     "posttest": "nyc report --reporter=json && codecov -f coverage/*.json",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "gulp",
     "minimize": "gulp --minimize"
+  },
+  "prettier": {
+    "printWidth": 140,
+    "singleQuote": true
+  },
+  "lint-staged": {
+    "*.ts": ["tslint --fix", "prettier --write", "git add"],
+    "*.{js,json}": ["prettier --write", "git add"]
   },
   "author": "Jean-Francois Cloutier & Yassine Lakhdar",
   "license": "GPL-3.0"
