--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@types/fs-extra": "^4.0.2",
     "@types/inquirer": "0.0.35",
     "@types/mocha": "^2.2.43",
+    "@types/nock": "^9.1.1",
     "@types/node": "8.0.20",
     "@types/opn": "^3.0.28",
     "@types/ora": "^1.3.1",
     "@types/promise": "^7.1.30",
     "@types/request": "^2.0.4",
+    "@types/sinon": "^4.1.3",
     "@types/typescript": "2.0.0",
     "@types/underscore": "^1.8.3",
     "chai": "^4.1.2",
@@ -46,11 +48,13 @@
     "json-loader": "^0.5.7",
     "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
+    "nock": "^9.1.6",
     "nodemon": "^1.12.1",
     "nyc": "^11.4.1",
     "prettier": "^1.9.2",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
+    "sinon": "^4.1.5",
     "ts-loader": "^2.3.7",
     "ts-node": "^4.1.0",
     "tslint": "^5.7.0",
