--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ script:
 - echo $PACKAGE_JSON_VERSION
 - npm run minimize
 - npm start & npm test
+branches:
+  only:
+  - master
+  - "/^.*release.*$/1"
+  - "/2\\.[0-9]+\\.[0-9]+/"
