--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_script:
 - npm install -g gulp
 before_install:
 - npm install -g npm@5.6.0
-- "{ sed -nE 's/^[ \\t]*\"version\": \"([0-9]{1,}\\.[0-9]{1,}\\.)[0-9x]{1,}\",$/\\1/p' package.json; git describe --abbrev=0 | sed -E 's/^v([0-9]{1,}\\.[0-9]{1,}\\.)([0-9]{1,})$/\\1 \\2/g'; } | tr \"\\n\" \" \" | awk '{printf($1==$2?\"v\"$2$3+1:\"v\"$1\"0\")}' | xargs -I {} git tag -a {} -m \"{}\"\n"
-- npm --no-git-tag-version version from-git
+# - "{ sed -nE 's/^[ \\t]*\"version\": \"([0-9]{1,}\\.[0-9]{1,}\\.)[0-9x]{1,}\",$/\\1/p' package.json; git describe --abbrev=0 | sed -E 's/^v([0-9]{1,}\\.[0-9]{1,}\\.)([0-9]{1,})$/\\1 \\2/g'; } | tr \"\\n\" \" \" | awk '{printf($1==$2?\"v\"$2$3+1:\"v\"$1\"0\")}' | xargs -I {} git tag -a {} -m \"{}\"\n"
+# - npm --no-git-tag-version version from-git
 script:
 - source read.version.sh
 - echo $PACKAGE_JSON_VERSION
@@ -19,9 +19,9 @@ script:
 branches:
   except:
   - /^v?\d+\.\d+\.\d+$/
-deploy:
-- provider: script
-  skip_cleanup: true
-  script: git push --tags
-  on:
-    branch: master
+# deploy: # need an account to deploy
+# - provider: script
+#   skip_cleanup: true
+#   script: git push --tags
+#   on:
+#     branch: master
