--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/underscore": "^1.8.3",
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
+    "cross-env": "^5.1.3",
     "del": "^3.0.0",
     "express": "^4.16.1",
     "gulp": "^3.9.1",
