--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "opn": "5.1.0",
     "ora": "^1.3.0",
     "request": "2.81.0",
+    "sort-keys": "^2.0.0",
     "typescript": "^2.5.3",
     "underscore": "1.8.3"
   },
