--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coveo-platform-client",
+  "name": "platform-client",
   "version": "1.1.1",
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "client.ts",
