--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ts-loader": "^2.3.7",
     "ts-node": "^4.1.0",
     "tslint": "^5.7.0",
+    "tslint-webpack-plugin": "^1.2.0",
     "webpack": "1.15.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-fail-plugin": "^1.0.6",
