Fix posttest script in package.json

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "start": "node test/mock/server.js",
     "test": "gulp test",
     "lintfix": "node node_modules/tsjs --tslint tslint.json --all --exclude node_modules/",
-    "posttest": "nyc report --reporter=json && codecov -f coverage/*.json",
+    "posttest": "node node_modules/nyc/bin/nyc.js report --reporter=json && codecov -f coverage/*.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "gulp",
     "minimize": "gulp --minimize"
