--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/underscore": "^1.8.3",
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
+    "conventional-recommended-bump": "^4.0.4",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
     "dts-generator": "^2.1.0",
@@ -46,6 +47,7 @@
     "gulp-shell": "^0.6.3",
     "gulp-typescript": "^3.2.2",
     "gulp-util": "^3.0.8",
+    "gulp-zip": "^4.2.0",
     "husky": "^0.14.3",
     "json-loader": "^0.5.7",
     "lint-staged": "^6.0.0",
@@ -56,6 +58,8 @@
     "prettier": "^1.9.2",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
+    "semver": "^5.6.0",
+    "standard-version": "^4.4.0",
     "ts-loader": "^2.3.7",
     "ts-node": "^4.1.0",
     "tslint": "^5.7.0",
@@ -70,6 +74,7 @@
     "precommit": "lint-staged",
     "start": "node test/mock/server.js",
     "test": "gulp test",
+    "release": "standard-version",
     "lintfix": "node node_modules/tsjs --tslint tslint.json --all --exclude node_modules/",
     "posttest": "node node_modules/nyc/bin/nyc.js report --reporter=json && codecov -f coverage/*.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
@@ -87,6 +92,11 @@
   "prettier": {
     "printWidth": 140,
     "singleQuote": true
+  },
+  "standard-version": {
+    "skip": {
+      "tag": true
+    }
   },
   "lint-staged": {
     "*.ts": ["tslint --fix", "prettier --write", "git add"],
