--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "opn": "5.1.0",
     "ora": "^1.3.0",
     "request": "2.81.0",
+    "strip-ansi": "^5.0.0",
     "typescript": "^2.5.3",
     "underscore": "1.8.3"
   },
@@ -31,6 +32,7 @@
     "@types/ora": "^1.3.1",
     "@types/promise": "^7.1.30",
     "@types/request": "^2.0.4",
+    "@types/strip-ansi": "^3.0.0",
     "@types/typescript": "2.0.0",
     "@types/underscore": "^1.8.3",
     "chai": "^4.1.2",
