build: Add gulp task to release

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "precommit": "lint-staged",
     "start": "node test/mock/server.js",
     "test": "gulp test",
-    "release": "standard-version",
+    "standard-version": "standard-version",
+    "release": "gulp release",
     "lintfix": "node node_modules/tsjs --tslint tslint.json --all --exclude node_modules/",
     "posttest": "node node_modules/nyc/bin/nyc.js report --reporter=json && codecov -f coverage/*.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
