--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   },
   "lint-staged": {
     "*.ts": ["tslint --fix", "prettier --write", "git add"],
-    "*.{js,json}": ["prettier --write", "git add"]
+    "*.{js}": ["prettier --write", "git add"]
   },
   "author": {
     "name": "Yassine Lakhdar",
