--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "coveo-platform-client",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "./bin/index.js",
   "types": "./bin/ts/index.d.ts",
-  "keywords": ["coveo", "cloud", "platform", "graduation", "diff", "fields", "extensions"],
+  "keywords": [
+    "coveo",
+    "cloud",
+    "platform",
+    "graduation",
+    "diff",
+    "fields",
+    "extensions"
+  ],
   "dependencies": {
     "chalk": "2.1.0",
     "commander": "^2.11.0",
@@ -84,7 +92,12 @@
     "build": "gulp",
     "minimize": "gulp --minimize"
   },
-  "files": ["bin", "lib", "src", "environments"],
+  "files": [
+    "bin",
+    "lib",
+    "src",
+    "environments"
+  ],
   "bugs": {
     "url": "https://github.com/coveo/platform-client/issues"
   },
@@ -102,14 +115,23 @@
     }
   },
   "lint-staged": {
-    "*.ts": ["tslint --fix", "prettier --write", "git add"],
-    "*.{js}": ["prettier --write", "git add"]
+    "*.ts": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.{js}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "author": {
     "name": "Yassine Lakhdar",
     "url": "http://github.com/y-lakhdar"
   },
-  "contributors": ["Jean-François Cloutier <github.com/ancientwindsm> (https://github.com/ancientwinds)"],
+  "contributors": [
+    "Jean-François Cloutier <github.com/ancientwindsm> (https://github.com/ancientwinds)"
+  ],
   "bin": {
     "platformclient": "./bin/client-global.js"
   },
