feat: Add update notifier

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "2.81.0",
     "strip-ansi": "^5.0.0",
     "typescript": "^2.5.3",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "update-notifier": "^2.5.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.50",
