--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coveo-platform-client",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "A simple client to manage organizations in the Coveo Cloud Platform",
   "main": "./bin/index.js",
   "types": "./bin/ts/index.d.ts",
@@ -19,6 +19,7 @@
     "commander": "^2.11.0",
     "flat": "4.0.0",
     "fs-extra": "^4.0.2",
+    "git-latest-semver-tag": "^1.0.2",
     "inquirer": "^3.3.0",
     "opn": "5.1.0",
     "ora": "^1.3.0",
@@ -114,7 +115,7 @@
   },
   "standard-version": {
     "skip": {
-      "tag": true
+      "tag": false
     }
   },
   "lint-staged": {
