chore: fix change log and change package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coveo-platform-client",
   "version": "2.3.0",
-  "description": "A simple client to manage organizations in the Coveo Cloud Platform",
+  "description": "A client to manage organizations in the Coveo Cloud Platform",
   "main": "./bin/index.js",
   "types": "./bin/ts/index.d.ts",
   "keywords": [
