--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "coveo-platform-client",
   "version": "2.5.0",
   "description": "A client to manage organizations in the Coveo Cloud Platform",
-  "main": "./bin/index.js",
-  "types": "./bin/ts/index.d.ts",
+  "main": "./bin/client-global.js",
   "keywords": [
     "coveo",
     "cloud",
@@ -15,85 +14,71 @@
   ],
   "dependencies": {
     "async": "^2.6.1",
-    "chalk": "2.1.0",
-    "commander": "^2.11.0",
-    "flat": "4.0.0",
-    "fs-extra": "^4.0.2",
-    "inquirer": "^3.3.0",
-    "opn": "5.1.0",
-    "ora": "^1.3.0",
-    "request": "2.81.0",
+    "chalk": "2.4.2",
+    "commander": "^2.19.0",
+    "flat": "4.1.0",
+    "fs-extra": "^7.0.1",
+    "inquirer": "^6.2.1",
+    "opn": "5.4.0",
+    "ora": "^3.0.0",
+    "request": "^2.88.0",
     "strip-ansi": "^5.0.0",
-    "typescript": "^2.5.3",
-    "underscore": "1.8.3",
+    "typescript": "^3.2.2",
+    "underscore": "1.9.1",
     "update-notifier": "^2.5.0"
   },
   "devDependencies": {
     "@types/async": "^2.0.50",
-    "@types/chai": "^4.0.4",
-    "@types/chalk": "0.4.31",
-    "@types/commander": "^2.11.0",
+    "@types/chai": "^4.1.7",
     "@types/flat": "0.0.28",
-    "@types/fs-extra": "^4.0.2",
-    "@types/inquirer": "0.0.35",
-    "@types/mocha": "^2.2.43",
-    "@types/nock": "^9.1.1",
-    "@types/node": "8.0.20",
-    "@types/opn": "^3.0.28",
-    "@types/ora": "^1.3.1",
-    "@types/promise": "^7.1.30",
-    "@types/request": "^2.0.4",
+    "@types/fs-extra": "^5.0.4",
+    "@types/inquirer": "0.0.43",
+    "@types/mocha": "^5.2.5",
+    "@types/nock": "^9.3.0",
+    "@types/node": "10.12.18",
+    "@types/opn": "^5.1.0",
+    "@types/ora": "^3.0.0",
+    "@types/request": "^2.48.1",
     "@types/strip-ansi": "^3.0.0",
-    "@types/typescript": "2.0.0",
-    "@types/underscore": "^1.8.3",
-    "chai": "^4.1.2",
-    "codecov": "^3.0.0",
+    "@types/underscore": "^1.8.9",
+    "chai": "^4.2.0",
+    "codecov": "^3.1.0",
     "conventional-recommended-bump": "^4.0.4",
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.2.0",
     "del": "^3.0.0",
-    "dts-generator": "^2.1.0",
-    "express": "^4.16.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-replace": "^0.6.1",
-    "gulp-shell": "^0.6.3",
-    "gulp-typescript": "^3.2.2",
-    "gulp-util": "^3.0.8",
+    "gulp-replace": "^1.0.0",
+    "gulp-shell": "^0.6.5",
     "gulp-zip": "^4.2.0",
-    "husky": "^0.14.3",
-    "json-loader": "^0.5.7",
-    "lint-staged": "^6.0.0",
-    "mocha": "^4.0.1",
-    "nock": "^9.1.6",
-    "nodemon": "^1.12.1",
-    "nyc": "^11.4.1",
-    "prettier": "^1.9.2",
-    "require-dir": "^0.3.2",
-    "run-sequence": "^2.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "2.0.0-beta.0",
+    "nock": "^10.0.6",
+    "nodemon": "^1.18.9",
+    "nyc": "^13.1.0",
+    "prettier": "^1.15.3",
+    "require-dir": "^1.2.0",
     "semver": "^5.6.0",
     "standard-version": "^4.4.0",
-    "ts-loader": "^2.3.7",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.7.0",
-    "tslint-webpack-plugin": "^1.2.0",
-    "webpack": "1.15.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-fail-plugin": "^1.0.6",
-    "webpack-node-externals": "^1.5.4",
-    "webpack-notifier": "^1.5.1"
+    "ts-loader": "^5.3.3",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-notifier": "^1.7.0"
   },
   "scripts": {
     "precommit": "lint-staged",
-    "start": "node test/mock/server.js",
     "test": "gulp test",
     "standard-version": "standard-version",
     "release": "gulp release",
     "lintfix": "node node_modules/tsjs --tslint tslint.json --all --exclude node_modules/",
     "posttest": "node node_modules/nyc/bin/nyc.js report --reporter=json && codecov -f coverage/*.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "build": "gulp",
-    "minimize": "gulp --minimize"
+    "build": "gulp"
   },
   "files": [
     "bin",
