--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "strict": true,
     "alwaysStrict": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "es2015",
     "declaration": false,
     "experimentalDecorators": true,
     "outDir": "./bin",
-    "sourceMap": true,
+    // "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
-    "typeRoots": ["lib", "./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./node_modules"]
