build: Update mocha to run with webpack

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,9 +1,4 @@
 {
   "include": ["src/**/*.ts"],
-  "exclude": ["**/*.d.ts", "**/*.js", "src/commons/interfaces/**/*.ts", "src/client.ts", "src/console/*.ts"],
-  "extension": [".ts"],
-  "require": ["ts-node/register"],
-  "reporter": ["html"],
-  "all": true,
-  "cache": true
+  "reporter": ["html"]
 }
