Changed opn package to open (deprecated)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "flat": "4.1.0",
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.1",
-    "opn": "5.4.0",
+    "open": "^6.3.0",
     "ora": "^3.0.0",
     "request": "^2.88.0",
     "strip-ansi": "^5.0.0",
@@ -36,7 +36,7 @@
     "@types/mocha": "^5.2.5",
     "@types/nock": "^9.3.0",
     "@types/node": "10.12.18",
-    "@types/opn": "^5.1.0",
+    "@types/open": "^6.1.0",
     "@types/ora": "^3.0.0",
     "@types/request": "^2.48.1",
     "@types/strip-ansi": "^3.0.0",
