--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": false,
     "experimentalDecorators": true,
     "outDir": "./bin",
-    // "sourceMap": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "typeRoots": ["./node_modules/@types"]
