--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "update-notifier": "^2.5.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/travis-cli": "^8.2.0",
     "@types/async": "^2.0.50",
     "@types/chai": "^4.1.7",
     "@types/deep-extend": "^0.4.31",
@@ -63,13 +65,13 @@
     "nodemon": "^1.18.9",
     "nyc": "^13.1.0",
     "prettier": "^1.15.3",
+    "semantic-release": "^15.13.31",
     "ts-loader": "^5.3.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
-    "webpack-notifier": "^1.7.0",
-    "semantic-release": "^15.13.31"
+    "webpack-notifier": "^1.7.0"
   },
   "husky": {
     "hooks": {
