ci: add prepublish hook to build package
This is required in order to load the right package.json file

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
     - stage: test
       script: npm test
     - stage: release
-      script: npm run build
+      # script: npm run build
       deploy:
         skip_cleanup: true
         provider: script
