--- a/package.json
+++ b/package.json
@@ -90,15 +90,13 @@
     "release": "semantic-release",
     "posttest": "node node_modules/nyc/bin/nyc.js report --reporter=json && codecov -f coverage/*.json",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "prepublishOnly": "npm run build",
     "build": "webpack --process --progress --colors",
     "snyk-protect": "snyk protect",
     "semantic-release": "semantic-release"
   },
   "files": [
-    "bin",
-    "lib",
-    "src",
-    "environments"
+    "bin"
   ],
   "bugs": {
     "url": "https://github.com/coveooss/platform-client/issues"
