--- a/tsconfig.all.json
+++ b/tsconfig.all.json
@@ -4,7 +4,6 @@
     "strict": true,
     "alwaysStrict": true,
     "module": "commonjs",
-    "target": "es2015",
     "declaration": false,
     "experimentalDecorators": true,
     "outDir": "./bin",
@@ -13,6 +12,5 @@
     "noUnusedLocals": true,
     "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"],
-  "exclude": ["./node_modules"]
+  "include": ["./src/**/*.ts", "./test/**/*.ts"]
 }
