feat: enable web login

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "inquirer": "^7.3.3",
     "open": "^7.1.0",
     "ora": "^5.0.0",
+    "puppeteer": "^5.3.1",
     "request": "^2.88.2",
     "snyk": "^1.373.1",
     "strip-ansi": "^6.0.0",
@@ -45,6 +46,7 @@
     "@types/inquirer": "7.3.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "14.0.27",
+    "@types/puppeteer": "^3.0.2",
     "@types/request": "^2.48.5",
     "@types/underscore": "^1.10.2",
     "chai": "^4.2.0",
