--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "extensions"
   ],
   "dependencies": {
+    "@coveord/platform-client": "^9.4.1",
+    "abortcontroller-polyfill": "^1.5.0",
     "async": "^3.2.0",
     "chalk": "4.1.0",
     "commander": "^6.0.0",
@@ -28,9 +30,9 @@
     "request": "^2.88.2",
     "snyk": "^1.373.1",
     "strip-ansi": "^6.0.0",
-    "typescript": "^3.9.7",
     "underscore": "1.10.2",
-    "update-notifier": "^4.1.0"
+    "update-notifier": "^4.1.0",
+    "whatwg-fetch": "^3.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
@@ -71,6 +73,7 @@
     "ts-loader": "^8.0.2",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "^2.5.2",
