--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "async": "^3.2.0",
+    "boxen": "^5.0.1",
     "chalk": "4.1.0",
     "commander": "^6.0.0",
     "deep-extend": "^0.6.0",
