--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,55 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          # pulls all commits (needed for lerna to correctly version)
-          # see https://stackoverflow.com/a/60184319/9285308 & https://github.com/actions/checkout
           fetch-depth: 0
-      # pulls all tags (needed for lerna to correctly version)
-      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/* # see https://stackoverflow.com/a/60184319/9285308
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm run setup
+      - run: npm run build
       - name: Setup credentials
         run: |
           git config --global user.email action@github.com
           git config --global user.name GitHub Action
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
-      - name: Setup git SSH remote
-        env:
-          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "${DEPLOY_KEY}" > ~/.ssh/id_rsa
-          chmod 400 ~/.ssh/id_rsa
-          echo "Host coveo-cli" > ~/.ssh/config
-          echo "Hostname github.com" >> ~/.ssh/config
-          echo "PreferredAuthentications publickey" >> ~/.ssh/config
-          echo -n "IdentityFile " >> ~/.ssh/config
-          echo -n ~ >> ~/.ssh/config
-          echo "/.ssh/id_rsa" >> ~/.ssh/config
-          git remote set-url origin git@coveo-cli:coveo/cli.git
-      - run: node_modules/.bin/lerna changed
-        if: ${{ github.event.inputs.version == ''}}
-      - name: Manually bump version
-        if: ${{ github.event.inputs.version != ''}}
-        run: node_modules/.bin/lerna publish ${{ github.event.inputs.version }} ---conventional-commits --force-publish -y --no-push --no-git-tag-version --no-git-reset --no-verify-access
-      - name: Semantically bump version
-        if: ${{ github.event.inputs.version == ''}}
-        run: node_modules/.bin/lerna publish ---conventional-commits -y --no-push --no-git-tag-version --no-git-reset --no-verify-access
-      - name: Wait for NPM cache to be updated
-        run: node ./scripts/wait-for-packages.js
-      - name: Normalize package.json and package-lock.json files
-        run: |
-          npm run npm:pkglock
-          npm run npm:cleanPackage
-      - name: Get the version
-        run: node ./scripts/get-version.js
-      - name: Commit changes, tag and push
-        run: |
-          echo -e "[Version bump] chore(release): publish v${{ env.tag }}\nlerna.json\nCHANGELOG.md\n**/CHANGELOG.md\n**/README.md" | git commit --all --file -
-          git tag "v${{ env.tag }}"
-          git push
-          git push --tags
-      - name: Create GitHub release.
-        run: npm run release:changelog
+      - name: Publish
+        run: npm run release
